# SolarSystem

./: .gitignore  Cargo.toml  LICENSE  README.md  shutdown-test.err  solar_system.orbs
.github/workflows/: release.yml
src/: app.rs  camera.rs  color.rs  constants.rs  ecs.rs  fps_overlay.rs  geometry.rs  main.rs  moon.rs  nbody.rs  orbit.rs  orbit_render.rs  pipeline.rs  planet.rs  render_utils.rs  ring_particles.rs  save.rs  scene.rs  stars.rs  state.rs  sun.rs  uniforms.rs  utils.rs
src/nbody/: tests.rs
src/orbit_render/: tests.rs
src/scene/: tests.rs
src/shaders/: orbit.wgsl  planet.wgsl  rings.wgsl  screen_dim.wgsl  stars.wgsl  sun.wgsl  text_overlay.wgsl
src/state/: draw_indirect.rs  egui_panel.rs  init.rs  interaction.rs  metrics.rs  persistence.rs  picking.rs  render.rs  ui.rs
