[package]
name = "SolarSystem"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "29.0.3"
glam = "0.33.1"
winit = "0.30.13"
bytemuck = "1.25.0"
pollster = "0.4.0"
cosmic-text = "0.15.0"
egui = "0.34.3"
egui-wgpu = "0.34.3"
egui-winit = "0.34.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
