[package]
name = "SolarSystem"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "29.0.3"
glam = { version = "0.33.1", features = ["serde"] }
winit = "0.30.13"
bytemuck = "1.25.0"
pollster = "0.4.0"
cosmic-text = "0.15.0"
egui = "0.34.3"
egui-wgpu = "0.34.3"
egui-winit = "0.34.3"
log = "0.4.32"
rand = "0.10.1"
env_logger = "0.11.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rfd = "0.15.4"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
